...
        android:layout_marginBottom="24dp"
        android:hint="Confirm Password"
        app:boxStrokeColor="@color/purple_500"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/purple_500" />
...
